<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<groupId>de.intranda.goobi.workflow</groupId>
		<artifactId>goobi-core</artifactId>
		<version>22.04.1-SNAPSHOT</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.intranda.goobi.workflow</groupId>
	<artifactId>goobi-core-jar</artifactId>
	<version>LOGIN</version>
	<packaging>jar</packaging>
	
	<build>
		<sourceDirectory>${project.basedir}/../src/main/java</sourceDirectory>
		<testSourceDirectory>${project.basedir}/../src/test/java</testSourceDirectory>
		<resources>
			<resource>
				<directory>${project.basedir}/../src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>${project.basedir}/../src/test/resources</directory>
			</testResource>
            <testResource>
                <directory>${project.basedir}/../src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
		</testResources> 
		<plugins>
		
            <plugin>
              <groupId>org.owasp</groupId>
              <artifactId>dependency-check-maven</artifactId>
              <version>7.0.4</version>
              <configuration>
              <!--
                  <failBuildOnCVSS>8.0</failBuildOnCVSS>
              -->
              <skipProvidedScope>true</skipProvidedScope>
              <skipTestScope>true</skipTestScope>
              <suppressionFiles>
                  <suppressionFile>${project.basedir}/goobi-suppression.xml</suppressionFile>
                    </suppressionFiles>
                    <format>ALL</format>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
              
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>

				</configuration>
                
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.12.4</version>
                <configuration>
<!--                           <skipTests>true</skipTests> -->
                    <includes>
                        <include>**/de/sub/goobi/TestAll.java</include>
                    </includes>
                    <systemProperties>
                        <property>
                            <name>java.util.logging.config.file</name>
                            <value>src/test/resources/log4j2.test.xml</value>
                        </property>
                    </systemProperties>                    
                    <argLine>--add-exports java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
                </configuration>

			</plugin>
		</plugins>
	</build>

</project>
